* Always show the 'reviewing ahead' section of the sidebar if you're   reviewing ahead, otherwise it's too easy to go to a specific puzzle by   ID and forget you're reviewing ahead. * Also put the chess board in its own container inside the left column,   because otherwise the left column could grow too tall, and not retain   an aspect ratio of 1, and it looks quite buggy. this way the chess   board just sits at the top of the left column and extra space is left   at the bottom if needed (such as when reviewing ahead makes the   sidebar longer).

--- a/assets/style.css
+++ b/assets/style.css
@@ -219,6 +219,11 @@ cg-board {
     display: none;
 }
 
+/* Always show reviewing ahead panel if it's there */
+.controls-subpanel#reviewing-ahead {
+    display: initial;
+}
+
 #white-to-move, #black-to-move, #white-to-move-computer, #black-to-move-computer, #puzzle-info {
     text-align: center;
 }
